--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "express-rnd",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "http-errors": "^1.7.3",
-    "uuid": "^3.3.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/node": "^7.7.4",
-    "@babel/preset-env": "^7.7.4"
-  },
+  "name": "express-boilerplate",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "^1.7.3",
+    "morgan": "~1.9.1"
+  }
 }
